deploy/istio-codedeploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whatos
  labels:
    app: whatos
    service: whatos
spec:
  ports:
  - port: 8081
    name: http
  type: ClusterIP 
  selector:
    app: whatos
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: whatos-v1
  labels: 
    app: whatos
    version: v1
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: whatos
        version: v1
    spec:
      containers:
      - name: whatos
        image: bjd145/whatos:1.0 
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: whatos-v2
  labels: 
    app: whatos
    version: v2
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: whatos
        version: v2
    spec:
      containers:
      - name: whatos
        image: bjd145/whatos:2.0 
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
