deploy/istio-ssl.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: whatos-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
       number: 443
       name: https
       protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
    hosts:
     - "whatos.denicolafamily.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: whatos-virtualservice
spec:
  hosts:
  - whatos.denicolafamily.com
  gateways:
  - whatos-gateway
  http:
  - match:
    - uri:
        exact: /api/os
    route:
    - destination:
        host: whatos
        port:
          number: 8081
