deploy/simple-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whatos-ingress
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: os.denicolafamily.com
    http:
     paths:
     - backend:
        serviceName: whatossvc
        servicePort: 80
       path: /app 
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: whatos
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: whatos
    spec:
      containers:
      - name: whatos
        image: bjd145/whatos:latest 
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: whatossvc
  labels:
    version: whatos
spec:
  selector:
    app: whatos
  ports:
  - port: 80
    targetPort: 8081
  type: LoadBalancer
